# pdf2anki

./: .gitignore  README.md  berlitz-cards.json  berlitz.yaml  pyproject.toml
pdf2anki/: __init__.py  __main__.py  anki_export.py  berlitz.py  cli.py  config.py  filters.py  generator.py  lmstudio.py  local_profile.py  models.py  pdf_reader.py  prompts.py  tags.py
tests/: test_comprehensive.py  test_filters.py  test_pdf2anki.py  test_tags.py
