[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2anki"
version = "0.1.0"
description = "Create Anki flashcards from PDF language-learning books, chapter by chapter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Domenico" }]
dependencies = [
    "pymupdf>=1.24.0",
    "genanki>=0.13.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pdf2anki = "pdf2anki.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["pdf2anki"]

[tool.ruff]
line-length = 100
target-version = "py310"
